Initial Release v1.0.0 Changing URLs in CHANGELOG.md Removing files for local CD/CI