@@ -1,35 +1,69 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.dddns.kirbylink</groupId>
-	<artifactId>maven-blueprint-project</artifactId>
-	<name>Maven Blueprint Project</name>
-	<description>A blue print maven project that can be used to create new maven projects</description>
-	<version>1.0.0-SNAPSHOT</version>
+	<artifactId>e-liquid-calculator</artifactId>
+	<name>Java E-Liquid Calculator</name>
+	<description>An application to calculate the amount of raw materials for preparing e-liquid</description>
+	<version>1.0.0</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
-		<lombok.version>1.18.28</lombok.version>
-		<slf4j-api.version>2.0.7</slf4j-api.version>
-		<logback-classic.version>1.4.1</logback-classic.version>
-		<logback-core.version>1.4.8</logback-core.version>
-		<main.class>${project.groupId}.${project.artifactId}</main.class>
-		<mockito-junit-jupiter.version>5.4.0</mockito-junit-jupiter.version>
-		<junit-jupiter.version>5.9.3</junit-jupiter.version>
-		<assertj-core.version>3.24.2</assertj-core.version>
-		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
-		<maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
-		<maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
-		<maven-failsafe-plugin.version>3.1.2</maven-failsafe-plugin.version>
-		<gitflow-maven-plugin.version>1.16.0</gitflow-maven-plugin.version>
-		<properties-maven-plugin.version>1.1.0</properties-maven-plugin.version>
+		<java.version>17</java.version>
+		<main.class>${project.groupId}.eliquidcalculator.ELiquidCalculatorApplication</main.class>
+		<jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
+		<spring.version>6.1.8</spring.version>
+		<commons-cli.version>1.8.0</commons-cli.version>
+		<lombok.version>1.18.32</lombok.version>
+		<mapstruct.version>1.5.5.Final</mapstruct.version>
+		<lombok-mapsturct-binding.version>0.2.0</lombok-mapsturct-binding.version>
+		<hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
+		<expressly.version>5.0.0</expressly.version>
+		<slf4j-api.version>2.0.13</slf4j-api.version>
+		<logback-classic.version>1.5.3</logback-classic.version>
+		<logback-core.version>${logback-classic.version}</logback-core.version>
+		<mockito-junit-jupiter.version>5.12.0</mockito-junit-jupiter.version>
+		<junit-jupiter.version>5.10.2</junit-jupiter.version>
+		<assertj-core.version>3.26.0</assertj-core.version>
+		<assertj-swing-junit.version>3.17.1</assertj-swing-junit.version>
+		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+		<maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
+		<maven-failsafe-plugin.version>${maven-surefire-plugin.version}</maven-failsafe-plugin.version>
+		<gitflow-maven-plugin.version>1.21.0</gitflow-maven-plugin.version>
+		<properties-maven-plugin.version>1.2.1</properties-maven-plugin.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>${commons-cli.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>${mapstruct.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${hibernate-validator.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.expressly</groupId>
+			<artifactId>expressly</artifactId>
+			<version>${expressly.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -49,6 +83,12 @@
 
 		<!-- Testing -->
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
 			<version>${junit-jupiter.version}</version>
@@ -66,6 +106,12 @@
 			<version>${mockito-junit-jupiter.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-swing-junit</artifactId>
+			<version>${assertj-swing-junit.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -74,14 +120,30 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>${mapstruct.version}</version>
+						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok-mapstruct-binding</artifactId>
+							<version>${lombok-mapsturct-binding.version}</version>
+						</path>
+					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>${maven-assembly-plugin.version}</version>
 				<configuration>
 					<archive>
 						<manifest>
@@ -134,7 +196,7 @@
 						<include>**/*IntegrationTest.java</include>
 						<include>**/*IntegrationTests.java</include>
 					</includes>
-					<argLine>${failsafeArgLine}</argLine>
+					<argLine>--add-opens java.base/java.util=ALL-UNNAMED ${failsafeArgLine}</argLine>
 				</configuration>
 				<executions>
 					<execution>
@@ -175,7 +237,9 @@
 				<artifactId>gitflow-maven-plugin</artifactId>
 				<version>${gitflow-maven-plugin.version}</version>
 				<configuration>
-					<!-- optional configuration -->
+					<gitFlowConfig>
+						<versionTagPrefix>v</versionTagPrefix>
+					</gitFlowConfig>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -198,64 +262,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<distributionManagement>
-		<repository>
-			<id>internal</id>
-			<url>https://artifactory.phoenix.ipv64.de/repository/internal/</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<url>https://artifactory.phoenix.ipv64.de/repository/snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
-
-	<repositories>
-		<repository>
-			<id>internal</id>
-			<name>Archiva Managed Internal Repository</name>
-			<url>https://artifactory.phoenix.ipv64.de/repository/internal/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>snapshots</id>
-			<name>Archiva Managed Snapshot Repository</name>
-			<url>https://artifactory.phoenix.ipv64.de/repository/snapshots/</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>internal</id>
-			<name>Archiva Managed Internal Repository</name>
-			<url>https://artifactory.phoenix.ipv64.de/repository/internal/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</pluginRepository>
-		<pluginRepository>
-			<id>snapshots</id>
-			<name>Archiva Managed Snapshot Repository</name>
-			<url>https://artifactory.phoenix.ipv64.de/repository/snapshots/</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
 </project>
